# KuroNet

./: .gitignore  README.md  pyproject.toml
src/kuronet/: __init__.py  errors.py  version.py
src/kuronet/client/: base.py  cookies.py  mc.py  routes.py
src/kuronet/client/components/: lab.py
src/kuronet/client/components/chronicle/: base.py  mc.py
src/kuronet/client/components/wish/: base.py  mc.py
src/kuronet/models/: base.py
src/kuronet/models/lab/: daily.py  mine.py  role.py
src/kuronet/models/mc/: character.py  wish.py
src/kuronet/models/mc/chronicle/: calabash.py  explorer.py  notes.py  role.py
src/kuronet/utils/: ds.py  enums.py  player.py
tests/: .env.example  conftest.py  test_lab_client.py  test_mc.py  test_mc_battle_chronicle_client.py
