[project]
name = "KuroNet"
version = "0.1.1"
description = "Modern API wrapper for Wuthering Waves built on asyncio and pydantic."
authors = [
    {name = "xtaodada", email = "xtao@xtaolink.cn"},
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic<3.0.0,>=2.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL 3.0+"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.7",
    "python-dotenv>=1.0.1",
]
